feat: Create static files and Add basic structure of navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,15 +51,15 @@
 </head>
 
 <body>
-    <header></header>
+    {% include "components/navbar.html" %}
 
     {% block content %}
     {% endblock %}
 
+    {% include 'components/footer.html' %}
+
     {% block postloadjs %}
     {% endblock %}
-
-
 </body>
 
 </html>
