--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,100 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
+
+/*--------------- General Styles ---------------*/
+html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
+a {
+    text-decoration: none;
+}
+
+.bg-orange {
+    background-color: #cd4c1d;
+}
+
+.upper {
+    text-transform: uppercase;
+}
+
+.margin-top {
+    margin-top: 6.5rem;
+}
+
+.link-hover {
+    text-decoration: none;
+    width: 100%;
+}
+
+.link-hover:hover {
+    box-shadow: rgb(0 0 0 / 20%) 0 10px 12px;
+}
+
+/*=============== Navbar ===============*/
+.navbar {
+    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%);
+    background-color: #dfdfdf;
+    transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
+    width: 100%;
+}
+
+.navbar p {
+    text-transform: uppercase;
+}
+
+.nav-link span {
+    font-size: 0.5rem;
+}
+
+.nav-item {
+    height: 2.5rem;
+}
+
+.navbar-toggler {
+    border-color: rgb(0, 0, 0) !important;
+}
+
 .brand-logo {
     height: 40px;
+}
+
+.dropdown-toggle::after {
+    display: none;
+}
+
+.dropdown>.dropdown-toggle:active {
+    pointer-events: none;
+}
+
+.dropdown-menu {
+    width: fit-content;
+    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%);
+    background-color: #ebebeb;
+    border: none;
+}
+
+.dropdown-item.active,
+.dropdown-item:active {
+    background-color: #ebebeb;
+    color: #000;
+}
+
+.search-box {
+    list-style: none;
+}
+
+.activity {
+    left: -300% !important;
+}
+
+.brand {
+    left: -400% !important;
 }
 
 .dropdown-img {
@@ -11,4 +106,38 @@
 .dropdown-img-brand {
     height: 100px;
     object-fit: cover;
+}
+
+.dropdown-menu p {
+    border-top: 1px solid #989797;
+}
+
+.dropdown-menu .dropdown-menu-brand-heading {
+    border-top: none;
+    font-weight: 500;
+    text-align: center;
+}
+
+.sale {
+    width: fit-content;
+    background-color: #cd4c1d;
+    clip-path: polygon(15% 0%, 100% 0%, 85% 100%, 0% 100%);
+}
+
+.sale>a {
+    color: #fff !important;
+}
+
+.search-box input {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.search-box button {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.search-box .btn-outline-secondary {
+    color: none !important;
 }
