--- a/templates/base.html
+++ b/templates/base.html
@@ -38,10 +38,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
-    <!-- Fontawsome -->
-    <script src="https://kit.fontawesome.com/db4afc7d29.js" crossorigin="anonymous"></script>
-    <!-- Custom JS -->
-    <script src="{% static 'js/base.js' %}"></script>
+
     {% endblock %}
 
     {% block extra_js %}
@@ -57,6 +54,8 @@
     {% endblock %}
 
     {% include 'components/footer.html' %}
+    <!-- Fontawsome -->
+    {% include 'components/scripts.html' %}
 
     {% block postloadjs %}
     {% endblock %}
