--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -16,7 +16,7 @@
             <div class="collapse navbar-collapse" id="navbarToggler">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item mx-1">
-                        <a class="nav-link text-nowrap" href="#products">All Bikes</a>
+                        <a class="nav-link text-nowrap" href="#">All Bikes</a>
                     </li>
                     <!-- Dropw Down Category-->
                     <li class="nav-item dropdown mx-1 dropdown-hover">
@@ -27,15 +27,14 @@
                                 <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
                                     <a class="dropdown-item d-flex flex-column" href="#">
                                         <p>All Mountain</p>
-                                        <img src="{% static 'all-mountain.jpg' %}" alt="Picture of Mountain"
+                                        <img src="{% static 'all-mountain.jpg' %}" alt="Picture of Mountainbike"
                                             class="dropdown-img">
                                     </a>
                                 </li>
                                 <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
                                     <a class="dropdown-item d-flex flex-column" href="#">
                                         <p>Enduro</p>
-                                        <img src="{% static 'enduro.jpg' %}" alt="Picture of Mountain"
-                                            class="dropdown-img">
+                                        <img src="{% static 'enduro.jpg' %}" alt="" class="dropdown-img">
                                     </a>
                                 </li>
                             </div>
@@ -43,16 +42,14 @@
                                 <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
                                     <a class="dropdown-item d-flex flex-column" href="#">
                                         <p>Cross Country</p>
-                                        <img src="{% static 'cross-country.webp' %}" alt="Picture of Mountain"
-                                            class="dropdown-img">
+                                        <img src="{% static 'cross-country.webp' %}" alt="" class="dropdown-img">
                                     </a>
                                 </li>
 
                                 <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
                                     <a class="dropdown-item d-flex flex-column" href="#">
                                         <p>Trail</p>
-                                        <img src="{% static 'trail.webp' %}" alt="Picture of Mountain"
-                                            class="dropdown-img">
+                                        <img src="{% static 'trail.webp' %}" alt="" class="dropdown-img">
                                     </a>
                                 </li>
                             </div>
@@ -60,8 +57,8 @@
                     </li>
                     <!-- Dropw Down Brand-->
                     <li class="nav-item dropdown mx-1 dropdown-hover">
-                        <a class="nav-link dropdown-toggle" id="dropdownMenuBrand" data-bs-toggle="dropdown"
-                            data-bs-display="static" aria-expanded="false" href="#">Brands</a>
+                        <a class="nav-link dropdown-toggle" id="dropdownMenuBrand" data-mdb-toggle="dropdown"
+                            aria-expanded="false" href="#">Brands</a>
                         <ul class="dropdown-menu dropwdown-menu-brand brand mb-2" aria-labelledby="dropdownMenuBrand">
                             <p class="mx-3 my-2 dropdown-menu-brand-heading">
                                 Top Brands
@@ -71,15 +68,13 @@
                                     <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
                                         <a class="dropdown-item d-flex flex-column" href="#">
                                             <p>Cannondale</p>
-                                            <img src="{% static 'cannondale.svg' %}" alt="Cannondale Logo"
-                                                class="dropdown-img-brand">
+                                            <img src="{% static 'cannondale.svg' %}" alt="" class="dropdown-img-brand">
                                         </a>
                                     </li>
                                     <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
                                         <a class="dropdown-item d-flex flex-column" href="#">
                                             <p>Fuji</p>
-                                            <img src="{% static 'fuji.png' %}" alt="Fuji Logo"
-                                                class="dropdown-img-brand">
+                                            <img src="{% static 'fuji.png' %}" alt="" class="dropdown-img-brand">
                                         </a>
                                     </li>
                                 </div>
@@ -89,15 +84,13 @@
                                     <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
                                         <a class="dropdown-item d-flex flex-column" href="#">
                                             <p>Scott</p>
-                                            <img src="{% static 'scott.png' %}" alt="Scott Logo"
-                                                class="dropdown-img-brand">
+                                            <img src="{% static 'scott.png' %}" alt="" class="dropdown-img-brand">
                                         </a>
                                     </li>
                                     <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
                                         <a class="dropdown-item d-flex flex-column" href="#">
                                             <p>Specialized</p>
-                                            <img src="{% static 'specialized.png' %}" alt="Specialized Logo"
-                                                class="dropdown-img-brand">
+                                            <img src="{% static 'specialized.png' %}" alt="" class="dropdown-img-brand">
                                         </a>
                                     </li>
                                 </div>
@@ -126,11 +119,15 @@
             </div>
             <ul class="navbar-nav d-flex flex-row user-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-bag-shopping fs-4 position-relative mx-2"><span
+                    <a class="nav-link" href="#">
+                        <i class="fa-solid fa-bag-shopping fs-4 position-relative mx-2">
+                            <span
                                 class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-orange">
                                 1
                                 <span class="visually-hidden">Items in bag</span>
-                            </span></i></a>
+                            </span>
+                        </i>
+                    </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
