feat: Add basic structure to index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,4 +2,14 @@
 {% load static %}
 
 {% block content %}
+<main>
+    <!-- Hero Banner-->
+    <section>
+
+    </section>
+    <!-- Reasons Why Banner -->
+    <div></div>
+    <!-- Category Callouts -->
+    <section></section>
+</main>
 {% endblock %}
