feat: Add hero banner and styling

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,7 +5,14 @@
 <main>
     <!-- Hero Banner-->
     <section>
-
+        <div class="hero">
+            <div class="circle">
+                <div class="hero-content">
+                    <h1 class="upper">Ride like a pro, shop with us!</h1>
+                    <button class="btn btn-cta upper"><a href="#">Shop Now</a></button>
+                </div>
+            </div>
+        </div>
     </section>
     <!-- Reasons Why Banner -->
     <div></div>
