--- a/static/css/base.css
+++ b/static/css/base.css
@@ -151,8 +151,88 @@ a {
     color: none !important;
 }
 
+/*=============== Media ===============*/
+.hero {
+    background: url("../hero.jpg") no-repeat;
+    background-size: cover;
+    height: 90vh;
+    max-width: 100%;
+}
+
+.circle {
+    position: absolute;
+    top: 20%;
+    right: 20%;
+    margin: auto;
+    height: 300px;
+    width: 300px;
+    border-radius: 100%;
+    overflow: hidden;
+}
+
+.circle::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #989797;
+    opacity: 0.8;
+}
+
+.hero-content {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.hero-content h1 {
+    font-size: 2rem;
+    letter-spacing: 1.1px;
+    color: #fff;
+    text-align: center;
+}
+
+.btn-cta {
+    background-color: #cd4c1d;
+    border: none;
+    border-radius: 0;
+    padding: 0.5rem 1rem;
+    margin-top: 1rem;
+}
+
+.btn-cta a {
+    color: #fff;
+    letter-spacing: 1.1px;
+}
+
+.btn-cta:hover {
+    box-shadow: rgba(0, 0, 0, 0.2) 0 4px 12px;
+    color: #fff;
+}
+
 
 /*=============== Media ===============*/
+
+@media only screen and (max-width: 454px) {
+    .hero {
+        background: url("../hero-mobile.jpg") no-repeat;
+    }
+
+    .reasons-why-banner p {
+        font-size: 0.8rem;
+    }
+
+    .circle {
+        right: 5%;
+    }
+}
+
 /* For desktop */
 @media (min-width: 768px) {
     .dropdown .dropdown-menu {
