--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -25,7 +25,7 @@
                         <ul class="dropdown-menu activity mb-2" aria-labelledby="dropdownMenuActivity">
                             <div class="d-flex justify-content-center">
                                 <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
-                                    <a class="dropdown-item d-flex flex-column" href="#">
+                                    <a class="dropdown-item d-flex flex-column" href="#product">
                                         <p>All Mountain</p>
                                         <img src="{% static 'all-mountain.jpg' %}" alt="Picture of Mountainbike"
                                             class="dropdown-img">
