feat: Add reason why banner to homepage and add styling for banner

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,7 +15,15 @@
         </div>
     </section>
     <!-- Reasons Why Banner -->
-    <div></div>
+    <!-- Reasons Why Banner -->
+    <div class="reasons-why-banner d-flex justify-content-center align-items-center upper bg-orange">
+        <p class="mx-3 mb-0">
+            <i class="bi bi-truck"></i> Free Shipping Over 1.000€
+        </p>
+        <p class="mx-3 mb-0">
+            <i class="bi bi-box-seam"></i> Free Return Shipment
+        </p>
+    </div>
     <!-- Category Callouts -->
     <section></section>
 </main>
