--- a/static/css/base.css
+++ b/static/css/base.css
@@ -151,7 +151,7 @@ a {
     color: none !important;
 }
 
-/*=============== Media ===============*/
+/*=============== Hero Banner ===============*/
 .hero {
     background: url("../hero.jpg") no-repeat;
     background-size: cover;
@@ -216,6 +216,13 @@ a {
     color: #fff;
 }
 
+/*=============== Reason Why Banner ===============*/
+.reasons-why-banner {
+    width: 100%;
+    height: 4rem;
+    color: #fff;
+    letter-spacing: 1.1px;
+}
 
 /*=============== Media ===============*/
 
