--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,7 +15,6 @@
         </div>
     </section>
     <!-- Reasons Why Banner -->
-    <!-- Reasons Why Banner -->
     <div class="reasons-why-banner d-flex justify-content-center align-items-center upper bg-orange">
         <p class="mx-3 mb-0">
             <i class="bi bi-truck"></i> Free Shipping Over 1.000€
@@ -25,6 +24,25 @@
         </p>
     </div>
     <!-- Category Callouts -->
-    <section></section>
+    <section>
+        <div class="container-fluid px-4 py-3 py-md-5">
+            <div class="row category-callout-container gx-3 gx-md-5">
+                <div class="col d-flex category-callout justify-content-center pb-4">
+                    <a href="#" class="link-hover">
+                        <div class="p-3 category-callout1 h-100 d-flex align-items-end">
+                            <p class="px-5 py-2 upper">Shop Women's Bikes</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col category-callout d-flex justify-content-center pb-4">
+                    <a href="#" class="link-hover">
+                        <div class="p-3 category-callout2 h-100 d-flex align-items-end">
+                            <p class="px-5 py-2 upper">Shop Sale</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
 {% endblock %}
