--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -44,5 +44,12 @@
             </div>
         </div>
     </section>
+    <!-- Top Products-->
+    <section>
+        <div class="container-fluid px-4 pb-4">
+            <h2 class="liner upper">Top Products&nbsp;</h2>
+        </div>
+    </section>
+
 </main>
 {% endblock %}
