feat: Add back-to-top button for product list. Create a css file to add styling for product_list and product detail. Create a js file to handle the back-to-top button. After user scrolled down the button will be displayed and if button is clicked it scrolls back to top

--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block extra_css %}
+<!-- Products CSS -->
+<link rel="stylesheet" href="{% static 'products/css/products.css' %}">
+{% endblock %}
+
 {% block content %}
 <!-- Product List -->
 <section>
@@ -45,4 +50,13 @@
         {% endfor %}
     </div>
 </section>
+<!-- Back to Top Button -->
+<button type="button" class="btn btn-floating" id="btn-back-to-top">
+    <i class="fas fa-arrow-up"></i>
+</button>
+{% endblock %}
+
+{% block postloadjs %}
+<!-- Products JS -->
+<script src="{% static 'products/js/back_to_top.js' %}"></script>
 {% endblock %}
