--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -109,7 +109,7 @@
                     </li>
                     <!--Search Bar -->
                     <li class="nav-item search-box pt-2 pt-md-0 ms-0 ms-md-2">
-                        <form class="d-flex" role="search" method="GET" action="#">
+                        <form class="d-flex" role="search" method="GET" action="{% url 'products' %}">
                             <input class="form-control" type="search" name="q" placeholder="Search" aria-label="Search">
                             <button type="button" class="btn btn-outline-secondary">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
