style: Add container with min-height to push down footer

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -15,6 +15,10 @@ a {
     text-decoration: none;
 }
 
+.page-container {
+    min-height: 70vh;
+}
+
 .bg-orange {
     background-color: #cd4c1d;
 }
