--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -12,7 +12,7 @@
     <div class="container-fluid margin-top">
         <div class="row justify-content-center">
             {% if products %}
-            <p>Search results: {{ request.GET.q|title }} ({{ products.paginator.count  }} products found)</p>
+            <p>Results: {{ request.GET.q|title }} ({{ products.paginator.count  }} products found)</p>
             {% for product in products %}
             <div
                 class="col-lg-2 col-md-3 col-sm-3 col-12 d-flex flex-column align-items-center product-container mb-5 mx-2 py-3">
@@ -51,7 +51,7 @@
         </div>
         {% endfor %}
         {% else %}
-        <div class="d-flex flex-column align-items-center">
+        <div class="d-flex flex-column align-items-center no-search-result p-5">
             <p>No search results found.</p>
             <button class="btn btn-cta upper"><a href="{% url 'products' %}">Show all products</a></button>
             {% endif %}
