--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -111,7 +111,7 @@
                     <li class="nav-item search-box pt-2 pt-md-0 ms-0 ms-md-2">
                         <form class="d-flex" role="search" method="GET" action="{% url 'products' %}">
                             <input class="form-control" type="search" name="q" placeholder="Search" aria-label="Search">
-                            <button type="button" class="btn btn-outline-secondary">
+                            <button type="submit" class="btn btn-outline-secondary">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-search" viewBox="0 0 16 16">
                                     <path
