feat: Add form to sort products and add query to sort in productlistview

--- a/products/static/products/css/products.css
+++ b/products/static/products/css/products.css
@@ -12,3 +12,9 @@
     background-color: #dfdfdf45;
     border: #dfdfdf 1px solid;
 }
+
+#sort-form select {
+    background-color: #6c757d;
+    color: #fff;
+    border: none;
+}
