feat: Add reset button for filters and sorting and add to JS

--- a/products/templates/products/filter.html
+++ b/products/templates/products/filter.html
@@ -75,6 +75,9 @@
             </div>
         </div>
     </form>
+    <div class="form-group ps-3">
+        <button type="button" class="btn btn-outline-secondary" id="reset">&#10006;</button>
+    </div>
 </div>
 <div class="selected-filters-container d-flex flex-row mb-4">
     <div id="selected-category-filter" class="me-2"></div>
