--- a/products/templates/products/filter.html
+++ b/products/templates/products/filter.html
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <label for="brand" hidden>Brands:</label>
-            <div id="category-checkboxes" class="dropdown dropdown-hover ps-3">
+            <div id="brand-checkboxes" class="dropdown dropdown-hover ps-3">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="brand-dropdown"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Filter Brand:&darr;
