style: Add padding to p fro search results and selected filters container

--- a/products/templates/products/filter.html
+++ b/products/templates/products/filter.html
@@ -79,7 +79,7 @@
         <button type="button" class="btn btn-outline-secondary" id="reset">&#10006;</button>
     </div>
 </div>
-<div class="selected-filters-container d-flex flex-row mb-4">
+<div class="selected-filters-container d-flex flex-row mb-4 ps-4">
     <div id="selected-category-filter" class="me-2"></div>
     <div id="selected-brand-filter" class="me-2"></div>
 </div>
